--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "grunt-browserify": "^5.0.0",
     "grunt-cli": "^1.2.0",
     "intersection-observer": "^0.3.2"
+  },
+  "dependencies": {
+    "vpaid-generic": "git://github.com/jdreetz/vpaid-generic.git"
   }
 }
