Tweak to fix travis.

--- a/travis.yml
+++ b/travis.yml
@@ -14,11 +14,15 @@ env:
   global:
     - VERSION_NUMBER="$(cat version.txt | tr -d '\n')"
 
+branches:
+  except:
+  - gh-pages
+	
 # Everything in bin is an artifact for distribution.
 # Only when a Pull Request against the "release" branch is MERGED this will run.
 # By default, the artifacts addon runs only on a push event, which means the merging of a PR.
 # For details, see: https://github.com/travis-ci/docs-travis-ci-com/issues/1115
-addons:
+# addons:
 #  chrome: stable
 #  artifacts:
 #    working_dir: bin
